# foliom

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PRD-outliner-markdown.md  README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-headless-indexing-core/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-read-only-web-ui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md  PERF-BASELINE.md
.planning/phases/03-outliner-editor/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md  ACPT-05-PORTABILITY.md  PERF-BASELINE.md
.planning/phases/04-disk-sync/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md  ACPT-04-WATCHER.md
.planning/phases/05-desktop-packaging/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md  PERF-BASELINE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cmd/: dump_tree.rs  index.rs  inventory.rs  mod.rs  reindex.rs  search.rs
crates/cli/src/cmd/serve/: browser.rs  dto.rs  embed.rs  format.rs  middleware.rs  mod.rs  state.rs  watcher.rs
crates/cli/src/cmd/serve/routes/: autocomplete.rs  blocks.rs  health.rs  journals.rs  mod.rs  pages.rs  search.rs  titles.rs  watch.rs
crates/cli/tests/: autocomplete_api.rs  bench_rss_smoke.rs  blocks_api.rs  bound_port_onceLock.rs  cli_integration.rs  portability_acpt_05.rs  rename_api.rs  serve_boot.rs  serve_prod_embed.rs  serve_routes.rs  watcher_integration.rs
crates/cli/tests/fixtures/acpt-05/before/: journal_2026_05_22.md  page_with_code_drawer_props.md
crates/core/: Cargo.toml
crates/core/benches/: README.md  cold_start.rs
crates/core/src/: inventory.rs  lib.rs  path.rs  query.rs
crates/core/src/indexer/: mod.rs  page_name.rs  write.rs
crates/core/src/mutation/: mod.rs  splice.rs  tree_ops.rs
crates/core/src/mutation/__tests__/: splice_test.rs  tree_ops_test.rs
crates/core/src/parser/: ast.rs  mod.rs  segment.rs
crates/core/src/rename/: journal.rs  mod.rs
crates/core/src/scanner/: config_edn.rs  ignore.rs  mod.rs  walk.rs
crates/core/src/storage/: location.rs  mod.rs
crates/core/src/storage/migrations/: 001_init.sql
crates/core/src/sync/: atomic.rs  mod.rs  self_writes.rs
crates/core/src/sync/__tests__/: atomic_test.rs  self_writes_test.rs
crates/core/tests/: ast_unit.rs  indexer_integration.rs  path_unit.rs  roundtrip.rs  scanner_unit.rs  segment_unit.rs  storage_integration.rs
crates/core/tests/fixtures/logseq-synthetic/: README.md
crates/core/tests/fixtures/logseq-synthetic/journals/: 2024_03_15.md
crates/core/tests/fixtures/logseq-synthetic/pages/: 01-simple-bullets.md  02-fence-in-bullet.md  03-block-properties.md  04-logbook-drawer.md  05-links-and-tags.md  06-hex-url-heading-not-tag.md  08-empty-and-deep.md  09-combo.md  Avaliação.md  Parent%2FChild.md
frontend/: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  main.ts  routes.ts
frontend/src/__tests__/: api.test.ts  stores.test.ts  watcher.test.ts
frontend/src/lib/: api.ts  keys.ts  sanitize.ts  stores.ts  watcher.ts  zoom.ts
frontend/src/lib/components/: BacklinksPanel.svelte  Block.svelte  BulletPopover.svelte  JournalNavigator.svelte  PageHeader.svelte  PageLinkChip.svelte  RenameModal.svelte  SearchPalette.svelte  SearchResult.svelte  Sidebar.svelte  ThemeToggle.svelte
frontend/src/lib/components/__tests__/: backlinks.test.ts  block-editing.test.ts  block.test.ts  bullet-popover.test.ts  journal-nav.test.ts  keys.test.ts  page-header-rename.test.ts  palette.test.ts  sidebar.test.ts  theme.test.ts
frontend/src/lib/editor/: autocomplete.ts  boundary.ts  extensions.ts  history-routing.ts  paste.ts  serialize.ts  view.ts
frontend/src/lib/editor/__tests__/: autocomplete.test.ts  boundary.test.ts  history-routing.test.ts  ime.test.ts  paste.test.ts  view.test.ts
frontend/src/lib/markdown/: index.ts  prism-langs.ts  rules.ts  strip.ts
frontend/src/lib/markdown/__tests__/: markdown.test.ts  rules.test.ts  strip.test.ts
frontend/src/lib/markdown/__tests__/fixtures/: 1000-blocks.ts
frontend/src/lib/pages/: JournalView.svelte  NotFound.svelte  PageView.svelte  RedirectToday.svelte  SearchView.svelte
frontend/src/lib/stores/: editing.ts  treeOpLog.ts  watcher.ts
frontend/src/lib/stores/__tests__/: treeOpLog.test.ts
frontend/src/styles/: blocks.css  global.css  palette.css  prism-foliom.css  sidebar.css
scripts/: acpt05_inspect.sh  bench_assert.py  footprint_check.sh  test_bench_assert.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
