# Foliom workspace manifest (D-07).
# Edition 2024 per D-09 ("edition 2024 when available").
# Installed toolchain (1.95) supports edition 2024 — no fallback needed.
# rust-version 1.85 declares MSRV.

[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

# Phase 2 backend stack (D-22..D-25). Pinned in 02-RESEARCH §Standard Stack.
# All crates verified in 02-RESEARCH §Package Legitimacy Audit (T-02-SC mitigation):
#   - axum / tower / tower-http: Tokio org / Tower maintainers
#   - tokio: Tokio team
#   - open: Byron (sebk on crates.io)
#   - time: time-rs org
[workspace.dependencies]
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tokio = { version = "1.40", features = ["macros", "rt", "signal", "net"] }
open = "5"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
# Plan 02-07: single-binary distribution. rust-embed compiles `frontend/dist/`
# into the release binary; mime_guess sets correct Content-Type per asset.
# Audited in 02-RESEARCH §Package Legitimacy Audit (T-02-SC mitigation):
#   - rust-embed: pyrossh/rust-embed, mature; `compression` feature gzips
#     embedded bytes at compile time (smaller binary).
#   - mime_guess: abonander/mime_guess, de-facto MIME lookup crate.
rust-embed = { version = "8", default-features = false, features = ["compression"] }
mime_guess = "2"
