# Foliom workspace manifest (D-07).
# Edition 2024 per D-09 ("edition 2024 when available").
# Installed toolchain (1.95) supports edition 2024 — no fallback needed.
# rust-version 1.85 declares MSRV.

[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

# Phase 2 backend stack (D-22..D-25). Pinned in 02-RESEARCH §Standard Stack.
# All crates verified in 02-RESEARCH §Package Legitimacy Audit (T-02-SC mitigation):
#   - axum / tower / tower-http: Tokio org / Tower maintainers
#   - tokio: Tokio team
#   - open: Byron (sebk on crates.io)
#   - time: time-rs org
[workspace.dependencies]
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tokio = { version = "1.40", features = ["macros", "rt", "signal", "net"] }
open = "5"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
# Plan 02-07: single-binary distribution. rust-embed compiles `frontend/dist/`
# into the release binary; mime_guess sets correct Content-Type per asset.
# Audited in 02-RESEARCH §Package Legitimacy Audit (T-02-SC mitigation):
#   - rust-embed: pyrossh/rust-embed, mature; `compression` feature gzips
#     embedded bytes at compile time (smaller binary).
#   - mime_guess: abonander/mime_guess, de-facto MIME lookup crate.
rust-embed = { version = "8", default-features = false, features = ["compression"] }
mime_guess = "2"
# Plan 02-08: performance harness (ACPT-02/03). Pinned per 02-RESEARCH
# §Package Legitimacy Audit (T-02-SC mitigation):
#   - sysinfo 0.30 returns RSS in BYTES (A4 — units changed across versions;
#     do NOT bump without verifying memory() return units).
#   - rand 0.8 + rand_chacha 0.3 = deterministic synthetic corpus generation
#     (bench-gen seeds ChaCha8Rng for reproducible /tmp/synth-5k output).
#   - criterion 0.5 = statistical bench harness (estimates.json contract).
sysinfo = "=0.30.13"
rand = "0.8"
rand_chacha = "0.3"
criterion = "0.5"
# Plan 03-01 (SNC-02): atomic write + self-write hash set.
#   - tempfile: NamedTempFile::persist gives atomic temp+rename on same-FS
#     targets (Linux rename(2), Windows MoveFileExW). Already pinned at "3"
#     as a dev-dep; Phase 3 promotes it to a runtime dep in `crates/core`.
#   - dashmap 6.x: lock-free concurrent map used by SelfWriteSet so the
#     mutation handler (writer) and Phase 4 watcher (reader) never contend
#     on a single Mutex. 6.2.1 is the current max-stable (7.x is rc).
#     Audited in 03-RESEARCH §2 + §Package Legitimacy.
tempfile = "3"
dashmap = "6"
