[package]
name = "foliom-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Foliom desktop shell — Tauri 2 wrapper around the axum server"
publish = false
build = "build.rs"

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store  = "2"
foliom-cli         = { path = "../crates/cli" }
anyhow             = "1"
tracing            = "0.1"
serde_json         = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "foliom-desktop"
path = "src/main.rs"
