[package]
name = "foliom-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "foliom"
path = "src/main.rs"

# Plan 01-07 wires the real CLI (D-01 / D-02 / D-18 / D-19):
#   - clap derive for the subcommand tree
#   - anyhow for top-level error context (D-19)
#   - serde / serde_json for --json output
#   - tracing + tracing-subscriber for structured logs with RUST_LOG (D-18)
[dependencies]
foliom-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
