[package]
name = "foliom-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "foliom"
path = "src/main.rs"

# Plan 02-08: synthetic 5k corpus generator for ACPT-02 cold-start bench.
# Deterministic given --seed; emits 70% journals + 30% topical pages with
# realistic TAB indents, code fences, drawers, properties, and refs.
[[bin]]
name = "foliom-bench-gen"
path = "src/bin/bench-gen.rs"

# Plan 01-07 wires the real CLI (D-01 / D-02 / D-18 / D-19):
#   - clap derive for the subcommand tree
#   - anyhow for top-level error context (D-19)
#   - serde / serde_json for --json output
#   - tracing + tracing-subscriber for structured logs with RUST_LOG (D-18)
#
# Plan 02-01 adds the Phase 2 `serve` subcommand (D-22..D-25):
#   - axum 0.7 + tower-http for the HTTP layer
#   - tokio (current_thread runtime) for axum::serve + ctrl_c
#   - open for best-effort `--open` browser launch
[dependencies]
foliom-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
open = { workspace = true }
# Plan 02-07: single-binary embed of frontend/dist + Content-Type lookup.
# In debug builds rust-embed is still linked (the macro is cfg'd away in
# embed.rs) but pulls no assets — `cargo check` on a fresh clone with only
# `frontend/dist/.gitkeep` succeeds.
rust-embed = { workspace = true }
mime_guess = { workspace = true }
# Plan 02-02: handlers do raw SQL via `Connection::prepare`/`query_map`.
# Pinned to the same version as crates/core to keep a single `libsqlite3-sys`
# native link in the workspace (otherwise cargo fails the link check).
rusqlite = { version = "0.39", features = ["bundled-full"] }
# Plan 02-02: journal date formatting (LNK-05) + `now_local` for the
# `/api/journals/today` redirect.
time = { workspace = true }
# Plan 02-08: bench-gen seeds ChaCha8Rng for deterministic corpus output.
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
