[package]
name = "foliom-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "foliom_cli"
path = "src/lib.rs"

[[bin]]
name = "foliom"
path = "src/main.rs"

# Plan 02-08: synthetic 5k corpus generator for ACPT-02 cold-start bench.
# Deterministic given --seed; emits 70% journals + 30% topical pages with
# realistic TAB indents, code fences, drawers, properties, and refs.
[[bin]]
name = "foliom-bench-gen"
path = "src/bin/bench-gen.rs"

# Plan 02-08: RSS probe for ACPT-03. Spawns `foliom serve`, warms one
# page, reads RSS via sysinfo by pid, exits non-zero if RSS > 450 MB.
[[bin]]
name = "foliom-bench-rss"
path = "src/bin/bench-rss.rs"

# Plan 01-07 wires the real CLI (D-01 / D-02 / D-18 / D-19):
#   - clap derive for the subcommand tree
#   - anyhow for top-level error context (D-19)
#   - serde / serde_json for --json output
#   - tracing + tracing-subscriber for structured logs with RUST_LOG (D-18)
#
# Plan 02-01 adds the Phase 2 `serve` subcommand (D-22..D-25):
#   - axum 0.7 + tower-http for the HTTP layer
#   - tokio (current_thread runtime) for axum::serve + ctrl_c
#   - open for best-effort `--open` browser launch
[dependencies]
foliom-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
open = { workspace = true }
# Plan 02-07: single-binary embed of frontend/dist + Content-Type lookup.
# In debug builds rust-embed is still linked (the macro is cfg'd away in
# embed.rs) but pulls no assets — `cargo check` on a fresh clone with only
# `frontend/dist/.gitkeep` succeeds.
rust-embed = { workspace = true }
mime_guess = { workspace = true }
# Plan 02-02: handlers do raw SQL via `Connection::prepare`/`query_map`.
# Pinned to the same version as crates/core to keep a single `libsqlite3-sys`
# native link in the workspace (otherwise cargo fails the link check).
rusqlite = { version = "0.39", features = ["bundled-full"] }
# Plan 03-03: BLAKE3 hash ↔ hex-string encoding for mutation API wire format.
hex = "0.4"
# Plan 03-03: blake3 for new-block hash in POST /api/blocks. Same version as
# crates/core so cargo deduplicates the native link.
blake3 = "1.5"
# Plan 02-02: journal date formatting (LNK-05) + `now_local` for the
# `/api/journals/today` redirect.
time = { workspace = true }
# Plan 04-01: filesystem watcher (SNC-03 + SNC-04).
# Pinned to stable versions — notify 9.0.0-rc.4 and debouncer-full 0.8.0-rc.2
# are pre-releases; "=" prefix prevents accidental RC upgrade (T-04-SC).
notify = "=6.1.1"
notify-debouncer-full = "=0.3.2"
# tokio-stream: BroadcastStream adapter for broadcast::Receiver → Stream for SSE.
tokio-stream = { version = "0.1", features = ["sync"] }
# dashmap: lock-free DirtySet for watcher coalescing (D-40-03). Already in
# workspace deps (crates/core uses it for SelfWriteSet); mirror dep here so
# the watcher.rs in crates/cli can use it directly.
dashmap = { workspace = true }
# Plan 02-08: bench-gen seeds ChaCha8Rng for deterministic corpus output;
# bench-rss reads RSS via sysinfo (pinned `=0.30.13` at workspace level
# for A4 unit-drift mitigation — process.memory() returns bytes only on
# 0.30.x).
rand = { workspace = true }
rand_chacha = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
# Plan 03-03: in-process axum router tests for mutation endpoints.
#   - http-body-util: BodyExt::collect needed to drain axum response bodies
#     in tower::ServiceExt::oneshot tests.
#   - hex: encode/decode blake3 hashes in test assertions (blake3 32-byte
#     arrays ↔ 64-char hex strings used in the wire JSON).
http-body-util = "0.1"
# Plan 03-07: ACPT-05 portability test uses pulldown_cmark as a CommonMark
# smoke-check on post-edit files. Same version as crates/core for deduplication.
pulldown-cmark = { version = "0.13", default-features = false }
