[package]
name = "foliom-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "foliom_core"
path = "src/lib.rs"

# Plan 02 adds the segmenter state machine (no new deps).
# Plan 03 adds pulldown-cmark / unicode-normalization / thiserror.
# Plan 04 adds rusqlite / blake3 / rusqlite_migration / tracing.
[dependencies]
pulldown-cmark = { version = "0.13", default-features = false }
unicode-normalization = "0.1"
thiserror = "1"
blake3 = "1.5"
# `bundled-full` ships SQLite C source compiled in-tree with FTS5/JSON1/RTree
# enabled — A7 belt-and-suspenders per the threat-model. No system SQLite dep.
rusqlite = { version = "0.39", features = ["bundled-full"] }
# Plan called for 1.3 (CONTEXT D-20) but 1.3 pins rusqlite ^0.32 which conflicts
# at the `libsqlite3-sys` native link with our 0.39. 2.5 supports rusqlite 0.39.
rusqlite_migration = "2.5"
tracing = "0.1"
# Promoted from dev-dep in Plan 01-05: now used by scanner::walk (D-17).
walkdir = "2.5"
# Plan 01-05: needed by scanner::config_edn for the minimal `:hidden` reader
# (regex-based, documented scope — full EDN parser is Phase 2 work).
regex = "1"
# Plan 01-07: JSON contract for the CLI (D-02). Structs in `inventory.rs`
# and `query.rs` derive `Serialize` and are the cross-phase API surface.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
